tests/ValidProofs/disjI1.fitch
|P(x)
|---
|P(x) ∨ P(y) (∨I1) 1