tests/InvalidRules/disjI2%2.fitch
|P(x)
|---
|P(x) ∨ P(y) (∨I2) 1
